WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
45241
[EFL] REGRESSION(66794) Need to fix build break.
https://bugs.webkit.org/show_bug.cgi?id=45241
Summary
[EFL] REGRESSION(66794) Need to fix build break.
Ryuan Choi
Reported
2010-09-05 05:42:39 PDT
Implementation of FrameLoaderClient for new feature make build break. /workspace/WebKit_EFL/WebKit/WebKit/efl/WebCoreSupport/FrameLoaderClientEfl.cpp: In member function ‘virtual WTF::PassRefPtr<WebCore::FrameNetworkingContext> WebCore::FrameLoaderClientEfl::createNetworkingContext()’: /workspace/WebKit_EFL/WebKit/WebKit/efl/WebCoreSupport/FrameLoaderClientEfl.cpp:951:12: error: ‘create’ is not a member of ‘WebCore::FrameNetworkingContext’ /workspace/WebKit_EFL/WebKit/WebKit/efl/WebCoreSupport/FrameLoaderClientEfl.cpp:951:48: error: ‘m_webFrame’ was not declared in this scope /workspace/WebKit_EFL/WebKit/WebKit/efl/WebCoreSupport/FrameLoaderClientEfl.cpp:951:64: error: ‘core’ was not declared in this scope make[2]: *** [WebKit/CMakeFiles/ewebkit.dir/efl/WebCoreSupport/FrameLoaderClientEfl.cpp.o] 오류 1 make[2]: *** 끝나지 않은 작업을 기다리고 있습니다.... make[1]: *** [WebKit/CMakeFiles/ewebkit.dir/all] 오류 2 make: *** [all] 오류 2
Attachments
Patch
(3.98 KB, patch)
2010-09-05 05:49 PDT
,
Ryuan Choi
no flags
Details
Formatted Diff
Diff
Patch
(4.04 KB, patch)
2010-09-06 08:18 PDT
,
Ryuan Choi
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Ryuan Choi
Comment 1
2010-09-05 05:49:54 PDT
Created
attachment 66597
[details]
Patch
Antonio Gomes
Comment 2
2010-09-05 11:48:29 PDT
Comment on
attachment 66597
[details]
Patch It needs a review. Diego what do you think?
Diego Gonzalez
Comment 3
2010-09-06 07:26:57 PDT
(In reply to
comment #2
)
> (From update of
attachment 66597
[details]
) > It needs a review. Diego what do you think?
Seems fine!
Lucas De Marchi
Comment 4
2010-09-06 07:44:18 PDT
Comment on
attachment 66597
[details]
Patch
> Index: WebKit/efl/ChangeLog > =================================================================== > --- WebKit/efl/ChangeLog (revision 66800) > +++ WebKit/efl/ChangeLog (working copy) > @@ -1,3 +1,20 @@ > +2010-09-05 Ryuan Choi <
ryuan.choi@samsung.com
> > + > + Unreviewed build fix. > + > + [EFL] REGRESSION(66794) Need to fix build break. > +
https://bugs.webkit.org/show_bug.cgi?id=45241
> + > + Add dummy class(FrameNetworkingContextEfl) like GTK+ port and implement > + as EFL style.
Since you copied from GTK, I think you should keep their copyright on WebKit/efl/WebCoreSupport/FrameNetworkingContextEfl.h
Ryuan Choi
Comment 5
2010-09-06 08:18:44 PDT
Created
attachment 66646
[details]
Patch
WebKit Commit Bot
Comment 6
2010-09-06 10:30:48 PDT
Comment on
attachment 66646
[details]
Patch Clearing flags on attachment: 66646 Committed
r66839
: <
http://trac.webkit.org/changeset/66839
>
WebKit Commit Bot
Comment 7
2010-09-06 10:30:53 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug