2010-09-06  Ryuan Choi  <ryuan.choi@samsung.com>

Unreviewed build fix.

        [EFL] REGRESSION(66794) Need to fix build break.
        https://bugs.webkit.org/show_bug.cgi?id=45241

        Add dummy class(FrameNetworkingContextEfl) like GTK+ port and implement
        as EFL style.

        * WebCoreSupport/FrameLoaderClientEfl.cpp:
        (WebCore::FrameLoaderClientEfl::createNetworkingContext):
        * WebCoreSupport/FrameNetworkingContextEfl.h: Added.
        (WebCore::FrameNetworkingContextEfl::create):
        (WebCore::FrameNetworkingContextEfl::coreFrame):
        (WebCore::FrameNetworkingContextEfl::FrameNetworkingContextEfl):

git-svn-id: svn://svn.chromium.org/blink/trunk@66839 bbb929c8-8fbe-4397-9dbb-9b2b20218538