third_party/WebKit/WebKit/efl/WebCoreSupport/FrameLoaderClientEfl.cpp
@@ -40,7 +40,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "EWebKit.h"
 #include "FormState.h"
 #include "FrameLoader.h"
-#include "FrameNetworkingContext.h"
+#include "FrameNetworkingContextEfl.h"
 #include "FrameTree.h"
 #include "FrameView.h"
 #include "HTMLFormElement.h"
@@ -949,7 +949,7 @@ void FrameLoaderClientEfl::transitionToCommittedForNewPage()
 
 PassRefPtr<FrameNetworkingContext> FrameLoaderClientEfl::createNetworkingContext()
 {
-    return FrameNetworkingContext::create(core(m_webFrame.get()));
+    return FrameNetworkingContextEfl::create(ewk_frame_core_get(m_frame));
 }
 
 }
